# fenrua-trust-gate

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
benches/: README.md
ci/: README.md  approved-fuzz-lock-packages.txt  approved-lock-packages.txt  r1-checks.sh  r2-checks.sh
crates/fenrua-c14n/: Cargo.toml
crates/fenrua-c14n/src/: lib.rs
crates/fenrua-c14n/tests/: fixture_corpus.rs  generated_properties.rs
crates/fenrua-cli/: Cargo.toml
crates/fenrua-cli/src/: lib.rs  main.rs
crates/fenrua-cli/tests/: r2_workflow.rs
crates/fenrua-crypto/: Cargo.toml
crates/fenrua-crypto/src/: ed25519_v1.rs  lib.rs
crates/fenrua-gate/: Cargo.toml
crates/fenrua-gate/src/: lib.rs
crates/fenrua-protocol/: Cargo.toml
crates/fenrua-protocol/src/: bounded_json.rs  lib.rs  problem.rs  r2.rs  schema.rs
crates/fenrua-protocol/tests/: fixture_corpus.rs  r2_local_profile.rs
crates/fenrua-testkit/: Cargo.toml
crates/fenrua-testkit/src/: lib.rs
crates/fenrua-verify/: Cargo.toml
crates/fenrua-verify/src/: lib.rs
docs/: ADR-0001-RUST_LOCAL_CORE.md  ADR-0002-SDK_REPOSITORY_BOUNDARY.md  ADR-0003-ED25519_SOURCE_PROFILE.md  COMPATIBILITY_POLICY.md  CRYPTOGRAPHIC_PROFILES.md  DECISION_SEMANTICS.md  DEPENDENCY_INVENTORY.md  DEPENDENCY_POLICY.md  DOMAIN_MODEL.md  PRODUCT_CONSTITUTION.md  PROMOTION_GATES.md  R1_SCOPE_AND_DEFERMENTS.md  R2_LOCAL_PROTOTYPE.md  R2_TEST_COVERAGE.md  REPOSITORY_ADMISSION_POLICY.md  SUPPORT_BOUNDARY.md  THREAT_MODEL_INDEX.md  THREAT_MODEL_R2.md  TRUST_BOUNDARY.md  VULNERABILITY_MANAGEMENT.md
docs/templates/: CLAIM_RECORD.md  EXCEPTION_RECORD.md  SECURITY_FINDING_RECORD.md
examples/: README.md
fixtures/: README.md
fixtures/r2/: policy-allow.json  request-replay-required.json
fixtures/v1/golden/: canonical-order-and-digest.txt
fixtures/v1/invalid/: duplicate-key.json
fixtures/v1/valid/: canonical-order-a.json  canonical-order-b.json
fuzz/: Cargo.toml  README.md
fuzz/corpus/: .gitignore
fuzz/corpus/bounded_json_r2/: duplicate-key.json  manifest.json  policy-allow.json  request-offline.json  revocations-current.json
fuzz/fuzz_targets/: bounded_json_r2.rs
schemas/: README.md
scripts/: check-dependency-policy.sh  check-fuzz-target.sh  check-public-admission.sh  check-r2-contract.sh  check-threat-model.sh  check-verifier-boundary.sh  check-vulnerability-management.sh
