[workspace]
members = [
    "crates/fenrua-protocol",
    "crates/fenrua-c14n",
    "crates/fenrua-crypto",
    "crates/fenrua-gate",
    "crates/fenrua-verify",
    "crates/fenrua-cli",
    "crates/fenrua-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0-r2.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/fenrualabs/fenrua-trust-gate"
description = "Unreleased R2 local-only Fenrua Trust Gate prototype"

[workspace.dependencies]
fenrua-c14n = { path = "crates/fenrua-c14n", version = "=0.1.0-r2.0" }
fenrua-crypto = { path = "crates/fenrua-crypto", version = "=0.1.0-r2.0" }
fenrua-gate = { path = "crates/fenrua-gate", version = "=0.1.0-r2.0" }
fenrua-protocol = { path = "crates/fenrua-protocol", version = "=0.1.0-r2.0" }
fenrua-verify = { path = "crates/fenrua-verify", version = "=0.1.0-r2.0" }
base64ct = { version = "=1.8.3", default-features = false, features = ["alloc"] }
ed25519-dalek = "=3.0.0"
getrandom = "=0.4.3"
sha2 = "=0.10.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"
