[package]
name = "fenrua-c14n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "R1 draft deterministic canonical JSON and digest primitives"

[dependencies]
fenrua-protocol.workspace = true
sha2.workspace = true

[lints]
workspace = true
