[package]
name = "fenrua-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Truthful discovery CLI for the unreleased R1 Trust Gate foundation"

[[bin]]
name = "fenrua"
path = "src/main.rs"

[dependencies]
fenrua-crypto.workspace = true
fenrua-protocol.workspace = true

[lints]
workspace = true
