[package]
name = "fenrua-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "R2 local-only Trust Gate prototype CLI"

[[bin]]
name = "fenrua"
path = "src/main.rs"

[dependencies]
fenrua-c14n.workspace = true
fenrua-crypto.workspace = true
fenrua-gate.workspace = true
fenrua-protocol.workspace = true
fenrua-verify.workspace = true

[lints]
workspace = true
