[package]
name = "fenrua-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "R2 signing-profile registry without key operations"

[dependencies]
fenrua-protocol.workspace = true

[lints]
workspace = true
