[package]
name = "fenrua-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "R1 fail-closed admission boundary and replay interface"

[dependencies]
fenrua-protocol.workspace = true

[lints]
workspace = true
