[package]
name = "fenrua-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "R2 local-only deterministic Trust Gate prototype"

[dependencies]
fenrua-c14n.workspace = true
fenrua-protocol.workspace = true

[lints]
workspace = true
