[package]
name = "fenrua-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic test-only Trust Gate R2 fixtures"
publish = false

[dependencies]
fenrua-c14n.workspace = true
fenrua-gate.workspace = true
fenrua-protocol.workspace = true
fenrua-verify.workspace = true

[lints]
workspace = true
